Sucess in overfitting for the 640 model and 1280 7E

--- a/data/hyp.tir_od.aug_gamma_scaling_before_mosaic_rnd_scaling_e6_full_res_OVERFITTING.yaml
+++ b/data/hyp.tir_od.aug_gamma_scaling_before_mosaic_rnd_scaling_e6_full_res_OVERFITTING.yaml
@@ -1,9 +1,9 @@
-lr0: 0.001 #0.001  # initial learning rate (SGD=1E-2, Adam=1E-3)
-lrf: 0.01  # final OneCycleLR learning rate (lr0 * lrf)
-momentum: 0.937  # SGD momentum/Adam beta1
-weight_decay: 0.0  # optimizer weight decay 5e-4  It resolve mAP of overfitting test
-warmup_epochs: 0.0  # warmup epochs (fractions ok)
-warmup_momentum: 0.8  # warmup initial momentum
+lr0: 0.0010
+lrf: 0.01
+momentum: 0.937
+weight_decay: 0.005
+warmup_epochs: 1
+warmup_momentum: 0.8
 warmup_bias_lr: 0.001 #0.001  # warmup initial bias lr
 loss_ota: 0 #1 # use ComputeLossOTA, use 0 for faster training
 box: 0.05  # box loss gain
