--- a/data/hyp.tir_od_v7_overfit.yaml
+++ b/data/hyp.tir_od_v7_overfit.yaml
@@ -1,37 +1,40 @@
-lr0: 0.01 #0.001  # initial learning rate (SGD=1E-2, Adam=1E-3)
-lrf: 0.01  # final OneCycleLR learning rate (lr0 * lrf)
-momentum: 0.937  # SGD momentum/Adam beta1
-weight_decay: 0.005  # optimizer weight decay 5e-4  It resolve mAP of overfitting test
-warmup_epochs: 0.0  # warmup epochs (fractions ok)
-warmup_momentum: 0.8  # warmup initial momentum
-warmup_bias_lr: 0.001 #0.001  # warmup initial bias lr
-loss_ota: 1 #1 # use ComputeLossOTA, use 0 for faster training
-box: 0.05  # box loss gain
-cls: 0.5  # cls loss gain
-cls_pw: 1.0  # cls BCELoss positive_weight
-obj: 1.0  # obj loss gain (scale with pixels)
-obj_pw: 1.0  # obj BCELoss positive_weight
-iou_t: 0.6  # like the default in the code was 0.2 IoU training threshold
-anchor_t: 4.0  # anchor-multiple threshold
-anchors: 2  # anchors per output layer (0 to ignore)  @@HK was 3
-fl_gamma: 1.5 #1.5  # focal loss gamma (efficientDet default gamma=1.5)
-hsv_h: 0.0  # image HSV-Hue augmentation (fraction)
-hsv_s: 0.0  # image HSV-Saturation augmentation (fraction)
-hsv_v: 0.0  # image HSV-Value augmentation (fraction)
-degrees: 0 # image rotation (+/- deg)
-translate: 0.0 #0.2  # image translation (+/- fraction)
-scale: 0.0  # image scale (+/- gain)
-shear: 0.0  # image shear (+/- deg)
-perspective: 0.0  # image perspective (+/- fraction), range 0-0.001
-flipud: 0.0  # image flip up-down (probability)
-fliplr: 0.0  # image flip left-right (probability)
-mosaic: 0.0  # image mosaic (probability)
-mixup: 0.0  # image mixup (probability)
-copy_paste: 0.0  # image copy paste (probability)
-paste_in: 0.0 # 0.1  # image copy paste (probability), use 0 for faster training : cutout
-inversion: 0.0 #opposite temperature
+lr0: 0.0010
+lrf: 0.01
+momentum: 0.937
+weight_decay: 0.005
+warmup_epochs: 1
+warmup_momentum: 0.8
+warmup_bias_lr: 0.001
+box: 0.05
+cls: 0.5
+cls_pw: 1.0
+obj: 1.0
+obj_pw: 1.0
+iou_t: 0.6
+anchor_t: 4.0
+anchors: 2
+fl_gamma: 1.5
+hsv_h: 0.0
+hsv_s: 0.0
+hsv_v: 0.0
+degrees: 0
+translate: 0
+scale: 0.6
+shear: 0.0
+perspective: 0.0
+flipud: 0.3
+fliplr: 0.5
+mosaic: 0.5
+mixup: 0.0
+copy_paste: 0.0
+paste_in: 0.1
+loss_ota: 0
+inversion: 0.5
 img_percentile_removal: 0.3
-beta : 0.3
-random_perspective : 1
-scaling_before_mosaic : 1
-gamma : 80   # percent 90 percente more stability to gamma
+beta: 0.3
+random_perspective: 1
+scaling_before_mosaic: 1
+gamma: 80
+person_size_small_medium_th: 1024
+car_size_small_medium_th: 1936
+random_pad: false
