--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 # Usage: pip install -r requirements.txt
 
 absl-py==2.1.0
+albumentations==1.4.21
 asttokens==2.4.1
 attrs==24.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
 clearml==1.16.4
 contourpy==1.2.1
+code-loader==1.0.86
 cycler==0.12.1
 decorator==5.1.1
 et-xmlfile==1.1.0
@@ -33,7 +35,7 @@ networkx==3.3
 # Base ----------------------------------------
 matplotlib>=3.2.2
 #numpy>=1.18.5,<1.24.0
-opencv-python>=4.1.1
+#opencv-python>=4.1.1
 onnx
 onnxsim
 onnx_graphsurgeon
@@ -47,7 +49,11 @@ tqdm>=4.41.0
 protobuf<4.21.3
 
 # Logging -------------------------------------
-tensorboard>=2.4.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+
 # wandb
 
 # Plotting ------------------------------------
@@ -95,6 +101,7 @@ six==1.16.0
 slicerator==1.1.0
 stack-data==0.6.3
 sympy==1.13.2
-tensorboard-data-server==0.7.2
+#tensorboard-data-server==0.7.2
 threadpoolctl==3.5.0
 tifffile==2024.8.10
+#numpy<1.26.0
