--- a/leapcfg/project_config.yaml
+++ b/leapcfg/project_config.yaml
@@ -2,15 +2,17 @@ IMGSZ: 640
 IMGSZ_TEST: 640
 GS: 32
 SINGLE_CLS: false
-CACHE_IMAGES: true
+CACHE_IMAGES: false
 RECT: false
 WORKERS: 8
 QUAD: false
 MAX_INSTANCE: 50
 LABEL_SMOOTHING: 0.0
 HYP: 'data/hyp.tir_od.tiny_aug_gamma_scaling_before_mosaic_rnd_scaling_no_ota.yaml'
-DATA: 'data/tir_od_center_roi_aug_list_train_cls_feb25.yaml'
-DATA_TEST: 'data/tir_od_test_set_3_class_train.yaml'
+DATA: 'data/tir_od_center_roi_aug_list_train_cls_feb25_tleap.yaml'
+DATA_TEST: 'data/tir_od_test_set_3_class_train_tleap.yaml'
+#DATA: 'data/tir_od_center_roi_aug_list_train_cls_feb25.yaml'
+#DATA_TEST: 'data/tir_od_test_set_3_class_train.yaml'
 CFG: 'cfg/training/yolov7.yaml' # 'cfg/deploy/yolov7.yaml'
 
 NMS:
