Rewrite detect.py using dataloader lie in train.py plots.py - add image plot to clearML

--- a/leapcfg/project_config.yaml
+++ b/leapcfg/project_config.yaml
@@ -11,6 +11,8 @@ LABEL_SMOOTHING: 0.0
 HYP: 'data/hyp.tir_od.tiny_aug_gamma_scaling_before_mosaic_rnd_scaling_no_ota.yaml'
 DATA: 'data/tir_od_center_roi_aug_list_train_cls_feb25_tleap.yaml'
 DATA_TEST: 'data/tir_od_test_set_3_class_train_tleap.yaml'
+UNLABELED_DATASET: 'data/unlabeled_210_data_set_tleap.txt'
+rel_path_for_list_files: '/mnt/Data/hanoch/tir_frames_rois/unlabeled'
 #DATA: 'data/tir_od_center_roi_aug_list_train_cls_feb25.yaml'
 #DATA_TEST: 'data/tir_od_test_set_3_class_train.yaml'
 CFG: 'cfg/training/yolov7.yaml' # 'cfg/deploy/yolov7.yaml'
